[package]
name = "diesel_update"
version = "0.1.0"
authors = ["tess"]

[dependencies]
diesel = { git = "https://github.com/sgrif/diesel.git" }
diesel_codegen = { git = "https://github.com/sgrif/diesel.git", default-features = false, features = ["nightly", "postgres"] }
dotenv = "0.8.0"
dotenv_macros = "0.8.0"
